--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>City Login</title>
+    <title>CR & TR for University</title>
     <link rel="stylesheet" href="LoginCSS.css">
     <style>
       .logo img{
@@ -277,7 +277,7 @@ side bar
                 <form name="userAuthentication" id="form1" action="index.html">
                     <center>
                         <img src="./forntend/src/images/welcome.jpeg" width="70" height="70" id="logo-2" alt="City Service Center Logo"/>
-                        <h6>CS and TS for a University</h6>
+                        <h6>CS and TA for a University</h6>
                     </center>
                     <div class="username">
                         <input type="text" id="email" name="email" placeholder="Enter Email" required/>
