--- a/home.html
+++ b/home.html
@@ -31,12 +31,11 @@
 								<a href="#feedback" class="navbar-link li" >Feedback</a>
 							</li>
                             <li class="hideOnMobile">
-								<img src="./forntend/src/images/account_circle.png" width="29px"/>
-                                <ul className="sub-list">
-                                    <!-- <li><a href="#">Username</a></li>
-                                    <li><a href="#">ID:Number</a></li> -->
-                                 </ul>
-							</li>
+                                <img src="./forntend/src/images/account_circle.png" width="29px"/>
+                                <ul class="sub-list">
+                                    <li><a href="index.html">Logout</a></li>
+                                </ul>
+                            </li>
 						</ul>
 					</nav>
 				</div>
@@ -146,7 +145,7 @@
                     <h2>Available Teachers</h2>
                     <div class="teacher-list">
                         <div class="teacher-card">
-                            <h3>Prof. John Doe</h3>
+                            <h3>Prof. Ravikumar</h3>
                             <p><strong>Rating:</strong> 4.5/5</p>
                             <p><strong>Research:</strong> AI, Machine Learning</p>
                             <p><strong>Patents:</strong> Patent 1, Patent 2</p>
@@ -154,7 +153,7 @@
                             <span><button>Choose Teacher</button></span> 
                         </div>
                         <div class="teacher-card">
-                            <h3>Prof. Jane Smith</h3>
+                            <h3>Prof. Nithish</h3>
                             <p><strong>Rating:</strong> 4.8/5</p>
                             <p><strong>Research:</strong> Cloud Computing</p>
                             <p><strong>Patents:</strong> Patent 3, Patent 4</p>
@@ -162,7 +161,7 @@
                             <span><button>Choose Teacher</button></span> 
                         </div>
                         <div class="teacher-card">
-                            <h3>Prof. John Doe</h3>
+                            <h3>Prof. Sadhik</h3>
                             <p><strong>Rating:</strong> 4.5/5</p>
                             <p><strong>Research:</strong> AI</p>
                             <p><strong>Patents:</strong> Patent 1, Patent 2</p>
@@ -170,7 +169,7 @@
                             <span><button>Choose Teacher</button></span> 
                         </div>
                         <div class="teacher-card">
-                            <h3>Prof. John Doe</h3>
+                            <h3>Prof. Nithyanandha</h3>
                             <p><strong>Rating:</strong> 4.5/5</p>
                             <p><strong>Research:</strong> AI</p>
                             <p><strong>Patents:</strong> Patent 1, Patent 2</p>
@@ -178,7 +177,7 @@
                             <span><button>Choose Teacher</button></span> 
                         </div>
                         <div class="teacher-card">
-                            <h3>Prof. John Doe</h3>
+                            <h3>Prof. Nagaraju</h3>
                             <p><strong>Rating:</strong> 4.5/5</p>
                             <p><strong>Research:</strong> AI</p>
                             <p><strong>Patents:</strong> Patent 1, Patent 2</p>
@@ -186,7 +185,7 @@
                             <span><button>Choose Teacher</button></span> 
                         </div>
                         <div class="teacher-card">
-                            <h3>Prof. John Doe</h3>
+                            <h3>Prof. Mahesh</h3>
                             <p><strong>Rating:</strong> 4.5/5</p>
                             <p><strong>Research:</strong> AI</p>
                             <p><strong>Patents:</strong> Patent 1, Patent 2</p>
