--- a/signin.html
+++ b/signin.html
@@ -286,8 +286,7 @@ side bar
                         <input type="password" id="password" name="password" placeholder="Enter Password"required/>
                     </div>
                     <div>
-                        <button type="submit"  id="signup" class="submit" >SignUp</button>
-                        <sub><a href="signin.html" style="color:red;">for SignIn</a></sub>
+                        <button type="submit"  id="signin" class="submit" >SignIn</button>
                     </div>
                 </form>
             </div>
@@ -300,7 +299,7 @@ side bar
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
   import { getDatabase ,set,ref} from "https://www.gstatic.com/firebasejs/10.14.1/firebase-database.js";
-import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
+  import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
 
@@ -319,16 +318,16 @@ import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com
   const app = initializeApp(firebaseConfig);
   const database = getDatabase(app);
   const auth = getAuth();
-  const signup=document.getElementById("signup");
-  signup.addEventListener('click',(e)=>{
+  const signin=document.getElementById("signin");
+  signin.addEventListener('click',(e)=>{
     e.preventDefault();
     var email=document.getElementById('email').value;
     var password=document.getElementById('password').value;
-    createUserWithEmailAndPassword(auth, email, password)
+    signInWithEmailAndPassword(auth, email, password)
   .then((userCredential) => {
     // Signed up 
     const user = userCredential.user;
-    alert('user created !');
+    alert('Welcome!!!!');
     window.location.href = "home.html";
   })
   .catch((error) => {
